--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
                <button onclick="generateFarmLoot('Broccoli')">Broccoli</button>
                <button onclick="generateFarmLoot('Carrot')">Carrot</button>
                <button onclick="generateFarmLoot('Potato')">Potato</button>
+               <button onclick="generateFarmLoot('Money Tree')">Money Tree</button>
             </div>
             <div id="farmLootResult" class="loot-result"></div>
          </div>
@@ -283,7 +284,7 @@
                       { item: "1 Carrot Seed", chance: 0.35 },
                       { item: "2 Carrot Seeds", chance: 0.1 },
                       { item: "1 Extra Carrot", chance: 0.15 },
-                      { item: "24-Carrot Gold", chance: 0.01 }
+                      { item: "24-Carrot Gold", chance: 0.02 }
                   ]
               },
               "Potato": {
@@ -294,6 +295,15 @@
                       { item: "2 Potato Seeds", chance: 0.15 },
                       { item: "1 Extra Potato", chance: 0.2 },
                       { item: "Bro-tato", chance: 0.04 }
+                  ]
+              },
+                           "Money Tree": {
+                  guaranteed: ["2 Gold"],
+                  extras: [
+                      { item: "2 Extra Gold", chance: 0.2 },
+                      { item: "1 Australium", chance: 0.01 },
+                      { item: "4 Extra Gold", chance: 0.05 },
+                      { item: "1 Money Tree Sapling", chance: 0.005 },
                   ]
               }
           };
